--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:push": "yarn test --coverage"
   },
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
@@ -31,5 +32,8 @@
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
