--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:push": "yarn test --coverage"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
@@ -34,6 +35,8 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@aws-sdk/util-dynamodb": "^3.245.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
     "express": "^4.18.2",
