--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0"
   }
