--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
@@ -41,6 +42,7 @@
     "dynamoose": "^3.1.0",
     "express": "^4.18.2",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0"
   }
