--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^9.0.0",
@@ -38,6 +39,7 @@
   "dependencies": {
     "@aws-sdk/util-dynamodb": "^3.245.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
     "express": "^4.18.2",
