--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 # Server
 PORT=
-HOST=
 JWT_SECRET=
 
 # AWS
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
+DETA_AWS_ACCESS_KEY_ID=
+DETA_AWS_SECRET_ACCESS_KEY=
+DETA_AWS_REGION=
