--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ams",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "Pedro Rubinger <pedro.rubinger@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
-    "dev": "nodemon -delay 500ms --watch 'src/' --exec 'ts-node -r tsconfig-paths/register --files src/server.ts' -e ts",
+    "dev": "nodemon -delay 500ms --watch 'src/' --exec 'ts-node -r tsconfig-paths/register --files src/index.ts' -e ts",
     "husky:prepare": "husky install",
     "test": "jest --passWithNoTests",
     "test:watch": "yarn test --watch",
